Added rule filtering into SamtFormatReader to catch source-side loops in grammar.
Reintroduced bracketed NTs, DiskHyperGraphReader still needs adapting.

Some random formatting, naming and comments cleanup. 

Added example output to svn:ignore.

git-svn-id: https://joshua.svn.sf.net/svnroot/joshua/trunk@878 0ae5e6b2-d358-4f09-a895-f82f13dd62a4